delete comments&inline styles

--- a/public/index.html
+++ b/public/index.html
@@ -8,40 +8,42 @@
     <style></style>
   </head>
 
-  <body>    
+  <body>
     <div class="navigation">
-      <header class="header">        
+      <header class="header">
         <img class="emblem" src="../assets/emblem.jpg" />
         <ol class="nav">
           <li>Квалифицированный тренерский состав</li>
           <li>Индивидуальный подход к каждому ребенку</li>
           <li>Разносторонее развитие физических качеств</li>
           <li>Стимулирование каждого спортсмена и доведение до результата</li>
-        </ol>        
+        </ol>
       </header>
     </div>
     <div class="flex-box">
       <section class="tournaments flex-item">
         <div>
-          <h2 style="color:red">Турнир 1</h2>
+          <h2 class="h">Турнир 1</h2>
           <p>Юниор-ДАФ 20 марта 2022 11:00</p>
         </div>
-        <div>
-          <h2 style="color:red">Турнир 2</h2>
+        <main>
+          <h2 class="h">Турнир 2</h2>
           <p>Волга НН -ДАФ 20 марта 2022 11:00</p>
-        </div>
+        </main>
         <div>
-          <h2 style="color:red">Турнир 3</h2>
+          <h2 class="h">Турнир 3</h2>
           <p>ШОР НН -ДАФ 20 марта 2022 11:00</p>
         </div>
         <div>
-          <h2 style="color:red">Турнир 4</h2>
+          <h2 class="h">Турнир 4</h2>
           <p>Сергач 2015 -ДАФ 20 марта 2022 11:00</p>
         </div>
       </section>
       <article class="news flex-item">
         <div>
-          <h3 style="margin-left: 100px; color:red">Летние спортивные сборы</h3>
+          <h3 class="h indentation">
+            Летние спортивные сборы
+          </h3>
           <p>
             Уважаемые родители! Скоро лето, а это значит, что нас ждут летние
             сборы. ДАФ объявляет набор групп: 10-13 лет, 8-9 лет, 5-7 лет (с
@@ -53,7 +55,9 @@
           </p>
         </div>
         <div>
-          <h3 style="margin-left: 100px; color:red">Лучшие ученики 2021-2022</h3>
+          <h3 class="h indentation">
+            Лучшие ученики 2021-2022
+          </h3>
           <p>
             Сегодня у нас очень приятная новость - мы подвели итоги 21-22
             учебного года! Лучшим учеником по итогам этого периода стал Кирилл
@@ -62,7 +66,7 @@
           </p>
         </div>
         <div>
-          <h3 style="margin-left: 100px;color:red">Поздравления</h3>
+          <h3 class="h indentation">Поздравления</h3>
           <p>
             Группа Kids вновь радует нас своими достижениями! Алексей
             Маремьянин, Илья Головин и Ярослав Вирясов получают медали и грамоты
@@ -72,25 +76,25 @@
       </article>
       <aside class="timetable flex-item">
         <div>
-          <h3 style="margin-left: 100px;color:red">Расписание</h3>
+          <h3 class="h indentation">Расписание</h3>
           <img class="img-timetable" src="../assets/timeTable.jpg" />
         </div>
       </aside>
     </div>
-    <h3 style="color:red">Лучшие ученики недели</h3>
+    <h3 class="h indentation">Лучшие ученики недели</h3>
     <div class="grid-box">
       <div class="grid-item">
         <img class="1" src="../assets/4.jpg" />
-        <p style="margin-left: 100px">Иванов Денис</p>
+        <p class="indentation">Иванов Денис</p>
       </div>
       <div class="grid-item">
         <img class="2" src="../assets/5.jpg" />
-        <p style="margin-left: 100px">Петров Иван</p>
+        <p class="indentation">Петров Иван</p>
       </div>
       <div class="grid-item">
         <img class="3" src="../assets/6.jpg" />
-        <p style="margin-left: 100px">Сидоров Андрей</p>
+        <p class="indentation">Сидоров Андрей</p>
       </div>
-    </div>    
+    </div>
   </body>
 </html>
