--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,7 @@
       </section>
       <article class="news flex-item">
         <div>
-          <h3 class="h indentation">
-            Летние спортивные сборы
-          </h3>
+          <h3 class="h indentation">Летние спортивные сборы</h3>
           <p>
             Уважаемые родители! Скоро лето, а это значит, что нас ждут летние
             сборы. ДАФ объявляет набор групп: 10-13 лет, 8-9 лет, 5-7 лет (с
@@ -55,9 +53,7 @@
           </p>
         </div>
         <div>
-          <h3 class="h indentation">
-            Лучшие ученики 2021-2022
-          </h3>
+          <h3 class="h indentation">Лучшие ученики 2021-2022</h3>
           <p>
             Сегодня у нас очень приятная новость - мы подвели итоги 21-22
             учебного года! Лучшим учеником по итогам этого периода стал Кирилл
